tdf#92000 save rectangle to DrawingML as a preset shape

Change-Id: I8b39a210490759e9f548c195e516a26b94a8b3cb